image added and modified

--- a/bio.html
+++ b/bio.html
@@ -12,7 +12,7 @@
     <div class="nav">
       <ul>
         <li><a class="homeblack" href="index.html">HOME</a></li>
-        <li><a class="homeblack" href="about.html">ABOUT ME</a></li>
+        <li><a class="homeblack" href="bio.html">ABOUT ME</a></li>
         <li><a class="homeblack" href="cv.html">CV</a></li>
         <li><a class="homeblack" href="contact.html">CONTACT</a></li>
       </ul>
@@ -24,6 +24,15 @@
       </div>
   </header>
   <section class="bio">
+    <div class="description">
+      <h1>About Me</h1>
+      <p>My name is Milan Shrestha. I am 23 years old now. I am one of the students of the University of Northampton. I have been reading IT(BSc Computing) at NAMI College in Nepal. I am a web designer.
+      I have been learning Java programming and javascript.</p>
+      <p>I am highly interested in IT. I want to be a software engineer. Besides studying, I am also fond of singing and listening music.</p>
+    </div>
+    <div class="bike">
+      <img src="image/bike.JPG" alt="sorry image couldn'd be loaded">
+    </div>
 
   </section>
     <footer>
