--- a/bio.html
+++ b/bio.html
@@ -3,6 +3,7 @@
 <head>
   <title>PORTFOLIO</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <header>
@@ -11,10 +12,10 @@
   </div>
     <div class="nav">
       <ul>
-        <li><a class="homeblack" href="index.html">HOME</a></li>
-        <li><a class="homeblack" href="bio.html">ABOUT ME</a></li>
-        <li><a class="homeblack" href="cv.html">CV</a></li>
-        <li><a class="homeblack" href="contact.html">CONTACT</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="bio.html">BIOGRAPHY</a></li>
+        <li><a href="cv.html">CV</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
       </ul>
     </div>
       <div class="search">
@@ -28,7 +29,7 @@
       <h1>About Me</h1>
       <p>My name is Milan Shrestha. I am 23 years old now. I am one of the students of the University of Northampton. I have been reading IT(BSc Computing) at NAMI College in Nepal. I am a web designer.
       I have been learning Java programming and javascript.</p>
-      <p>I am highly interested in IT. I want to be a software engineer. Besides studying, I am also fond of singing and listening music.</p>
+      <p>I am highly interested in IT. I want to be a software engineer. Besides studying, I am also fond of singing and listening music,riding bikes and do swimming as well.</p>
     </div>
     <div class="bike">
       <img src="image/bike.JPG" alt="sorry image couldn'd be loaded">
@@ -36,7 +37,15 @@
 
   </section>
     <footer>
-          <p>milan,Copyright &copy; 2017</p>
+      <div class="icon">
+      <a href="https://wwww.facebook.com/"><i class="fa fa-facebook-official"></i></a>
+      <a href="https://wwww.twitter.com/"><i class="fa fa-twitter-square"></i></a>
+      <a href="https://wwww.yahoo.com/"><i class="fa fa-yahoo"></i></a>
+      <a href="https://wwww.google.com/"><i class="fa fa-google-plus-square"></i></a>
+     </div>
+    <div class="copy">
+        <p>milan,Copyright &copy; 2017.All rights reserved.</p>
+    </div>
     </footer>
 
 </body>
