--- a/bio.html
+++ b/bio.html
@@ -40,16 +40,16 @@ UN ID:16418532
       <p>I am highly interested in IT. I want to be a software engineer. Besides studying, I am also fond of singing and listening music,riding bikes and do swimming as well.</p>
     </div>
     <div class="bike">
-      <img src="image/bike.JPG" alt="sorry image couldn'd be loaded">
+      <img src="image/bike.JPG" alt="sorry image couldn'd be loaded"><!--this property is used to insert image and if it is not loded it displays some message-->
     </div>
 
-  </section>
+  </section><!--section part ends here-->
   <footer><!--this property is for the footer part in the page,this is for footer-->
     <div class="icon"><!--this property is to create division inside the footer part named icon to insert icons in the footer section -->
-    <a href="https://wwww.facebook.com/"><i class="fa fa-facebook-official"></i></a><!--this pro[erty helps to creat icon and to create link of facebook.this code is from w3schools.com-->
-    <a href="https://wwww.twitter.com/"><i class="fa fa-twitter-square"></i></a><!--this pro[erty helps to create icon and to create link of twitter.this code is from w3schools.com-->
-    <a href="https://wwww.yahoo.com/"><i class="fa fa-yahoo"></i></a><!--this pro[erty helps to creat icon and to create link of yahoo.this code is from w3schools.com-->
-    <a href="https://wwww.google.com/"><i class="fa fa-google-plus-square"></i></a><!--this pro[erty helps to creat icon and to create link of google.this code is from w3schools.com-->
+    <a href="https://www.facebook.com/"><i class="fa fa-facebook-official"></i></a><!--this pro[erty helps to creat icon and to create link of facebook.this code is from w3schools.com-->
+    <a href="https://www.twitter.com/"><i class="fa fa-twitter-square"></i></a><!--this pro[erty helps to create icon and to create link of twitter.this code is from w3schools.com-->
+    <a href="https://www.yahoo.com/"><i class="fa fa-yahoo"></i></a><!--this pro[erty helps to creat icon and to create link of yahoo.this code is from w3schools.com-->
+    <a href="https://www.google.com/"><i class="fa fa-google-plus-square"></i></a><!--this pro[erty helps to creat icon and to create link of google.this code is from w3schools.com-->
   </div><!--the icon division ends here-->
    <div class="copy"><!--this is the new divison inside the footer named copy-->
       <p>milan,Copyright &copy; 2017.All rights reserved.</p><!--this tag is for the copyright as the paragraph-->
